--- a/styles_website.css
+++ b/styles_website.css
@@ -12,6 +12,23 @@ body, html {
     left: 0;
     z-index: -1;
 }
+.desktop-nav {
+    display: none; /* Hide on mobile */
+}
+
+.hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.hamburger-menu div {
+    width: 25px;
+    height: 3px;
+    background-color: #333;
+    margin: 3px 0;
+}
+
 .mobile-nav {
     display: none;
     position: absolute;
